# dcs

./: CLAUDE.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  spec.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
crates/dcs-app/: Cargo.toml
crates/dcs-app/src/: boards.rs  crops.rs  cull.rs  export.rs  history.rs  lib.rs  registry.rs  selection.rs  session.rs  tags.rs  thumb_cache.rs  util.rs
crates/dcs-app/src/session/: board.rs  burst.rs  display.rs  edit.rs  filter.rs  group_ops.rs  layout.rs  search.rs  store.rs  tag.rs
crates/dcs-app/tests/: boards_test.rs  burst_session_test.rs  cull_test.rs  export_session_test.rs  filter_session_test.rs  gallery_session_test.rs  group_ops_test.rs  history_test.rs  missing_and_lock_test.rs  persistence_roundtrip_test.rs  registry_test.rs  search_session_test.rs  selection_test.rs  session_test.rs  tags_session_test.rs  tags_test.rs
crates/dcs-domain/: Cargo.toml
crates/dcs-domain/src/: burst.rs  command.rs  crops.rs  cull.rs  export.rs  filter.rs  fingerprint.rs  fuzzy.rs  grouping.rs  lib.rs  pairing.rs  photo.rs  search.rs  sort.rs  tag.rs  thumb.rs  timezone.rs  view.rs
crates/dcs-domain/tests/: burst_test.rs  crops_test.rs  cull_test.rs  export_test.rs  filter_test.rs  fingerprint_test.rs  fuzzy_test.rs  grouping_test.rs  pairing_test.rs  photo_test.rs  search_test.rs  sort_test.rs  tag_grouping_test.rs  tag_test.rs  timezone_test.rs  view_test.rs
crates/dcs-io/: Cargo.toml  build.rs  model_revision.txt
crates/dcs-io/src/: cache.rs  embedding.rs  export.rs  imaging.rs  lib.rs  lock.rs  persistence.rs  recents.rs  reveal.rs  source.rs  undo_log.rs
crates/dcs-io/tests/: cache_test.rs  export_test.rs  imaging_test.rs  lock_test.rs  persistence_test.rs  recents_test.rs  source_test.rs  undo_log_test.rs
crates/dcs-ui/: Cargo.toml  build.rs
crates/dcs-ui/src/: app.rs  board.rs  context_menu.rs  crop.rs  export.rs  gallery.rs  grid.rs  keymap.rs  main.rs  picker.rs  theme.rs
crates/dcs-ui/src/app/: dialogs.rs  input.rs  menus.rs  view.rs
dcs-app/: Cargo.toml
dcs-app/src/: lib.rs
dcs-domain/: Cargo.toml
dcs-domain/src/: lib.rs
dcs-io/: Cargo.toml
dcs-ui/: Cargo.toml
docs/: persistence-phase.md
scripts/: gen-icons.sh
