[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paologaleotti/dcs"

# All external deps live here. Each crate pulls only what it needs via
# `<dep>.workspace = true`. Single source of truth for versions.
[workspace.dependencies]
dcs-domain = { path = "crates/dcs-domain" }
dcs-io = { path = "crates/dcs-io" }
dcs-app = { path = "crates/dcs-app" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "macros", "parsing"] }
# `system` feature resolves the OS local zone (the shoot-zone default).
time-tz = { version = "2", features = ["system"] }
fuzzy-matcher = "0.3"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
turbojpeg = "1"
kamadak-exif = "0.6"
rayon = "1"
walkdir = "2"
blake3 = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
crossbeam-channel = "0.5"
rfd = "0.15"
egui = "0.34.3"
# wgpu backend → Metal on macOS, Vulkan/DX12 elsewhere. Unlike the glow
# (OpenGL) backend, Metal drives ProMotion (120 Hz); Apple caps GL surfaces
# at 60. The grid's scroll smoothness rides on this.
eframe = { version = "0.34.3", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
