[package]
name = "dcs-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Conductor: session, command registry, dispatch, keymap, durable undo,
# thin export trigger. Depends DOWN on dcs-io + dcs-domain. (§9)
[dependencies]
dcs-domain.workspace = true
dcs-io.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
