[package]
name = "dcs-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# egui binary: view modes (grid, gallery; board later) + ephemeral UI
# state. Top of the tree. Depends DOWN on dcs-app + dcs-domain. (§9)
[[bin]]
name = "dcs"
path = "src/main.rs"

[dependencies]
dcs-app.workspace = true
dcs-domain.workspace = true

egui.workspace = true
eframe.workspace = true
