[package]
name = "dcs-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Conductor between the UI and dcs-io. Depends DOWN on dcs-io + dcs-domain. (§9)
[dependencies]
dcs-domain.workspace = true
dcs-io.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Resolving the system shoot-zone default (the IANA zone grouping needs).
time-tz.workspace = true

[dev-dependencies]
# Real JPEGs for end-to-end decode/cache tests.
image.workspace = true
