[package]
name = "dcs-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Conductor between the UI and dcs-io. Depends DOWN on dcs-io + dcs-domain. (§9)
[dependencies]
dcs-domain.workspace = true
dcs-io.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Capture instants for burst derivation; system shoot-zone resolution.
time.workspace = true
time-tz.workspace = true
# Channels to the background AI enable/load worker.
crossbeam-channel.workspace = true

[features]
# Forwarded to dcs-io; see its manifest. Lets the binary pick a GPU backend.
metal = ["dcs-io/metal"]
cuda = ["dcs-io/cuda"]

[dev-dependencies]
# Real JPEGs for end-to-end decode/cache tests.
image.workspace = true
