[package]
name = "dcs-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# PURE core: types + pure functions. No I/O, no async, no egui. (§9)
# Bottom of the tree — depends on no internal crate.
[dependencies]
serde.workspace = true
time.workspace = true
time-tz.workspace = true
thiserror.workspace = true
# Fuzzy subsequence scoring (Skim algorithm) behind our own thin wrapper.
fuzzy-matcher.workspace = true

[dev-dependencies]
# Round-trip Command through JSON to lock the undo.log serialization seam (§5).
serde_json.workspace = true
