[package]
name = "dcs-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "dcs — a fast, keyboard-first digital contact sheet for scanning, culling, and tagging photos."

# Linux .deb packaging (cargo-deb). The binary lands in /usr/bin; runtime
# library deps are resolved automatically from the linked shared objects.
[package.metadata.deb]
maintainer = "Paolo Galeotti <paologaleotti2002@gmail.com>"
section = "graphics"
priority = "optional"
depends = "$auto"
extended-description = "A digital contact sheet: scan a folder of photos, cull and tag them keyboard-first, and export — non-destructively."

# egui binary: view modes (grid, gallery; board later) + ephemeral UI
# state. Top of the tree. Depends DOWN on dcs-app + dcs-domain. (§9)
[[bin]]
name = "dcs"
path = "src/main.rs"

[features]
# Pass-through GPU backends. `cuda` is opt-in: build with `--features cuda` on an
# Nvidia machine with the CUDA toolkit installed. `metal` is auto-enabled on macOS
# (see the target-specific dependency below), so Mac builds get GPU for free.
metal = ["dcs-app/metal"]
cuda = ["dcs-app/cuda"]

[dependencies]
dcs-app.workspace = true
dcs-domain.workspace = true

egui.workspace = true
eframe.workspace = true
rfd.workspace = true

# Apple Metal needs no external toolkit and ships with macOS, so enable it by
# default there — embedding indexing runs on the GPU out of the box.
[target.'cfg(target_os = "macos")'.dependencies]
dcs-app = { workspace = true, features = ["metal"] }
